--- a/Memory/memory.html
+++ b/Memory/memory.html
@@ -87,7 +87,7 @@
 	</head>
 	<body>
     
-    <img src="favicon2.png" alt="favicon" style="display:block;width:0px; height:0px; overflow:hidden" />
+    <img src="favicon-400x400.jpg" alt="favicon" style="display:block;width:0px; height:0px; overflow:hidden" />
     
 		<div id="page">
 			
