Revert "memory - weixin - 1.2.1"
This reverts commit b32965afcfc67f96c28cd432c21fc771e117913b.

--- a/Memory/memory.html
+++ b/Memory/memory.html
@@ -87,7 +87,7 @@
 	</head>
 	<body>
     
-    <img src="favicon3-400x400-2.png" alt="favicon" style="display:block;width:0px; height:0px; overflow:hidden" />
+    <img src="favicon2.png" alt="favicon" style="display:block;width:0px; height:0px; overflow:hidden" />
     
 		<div id="page">
 			
