--- a/lazyload-test/faile/lazyload-test.html
+++ b/lazyload-test/faile/lazyload-test.html
@@ -5,7 +5,7 @@
   <title>lazyload test</title>
   <link rel="stylesheet" href="../test.css" />
   
-  <script src="http://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
+  <script src="../jquery.min.js"></script>
   <script src="jquery.lazyload.js"></script>
   <script>
     $(function(){
