pick-stick fix user-select

--- a/pick-stick/pick-stick-2.0.html
+++ b/pick-stick/pick-stick-2.0.html
@@ -8,7 +8,12 @@
 		<title>Pick Stick 2.0</title>
 		<link rel="stylesheet" type="text/css" href="../css/FIP-1.0.css" />
 		<link rel="stylesheet" type="text/css" href="pick-stick-2.0.css" />
-		
+		<style>
+      html, body{
+        -webkit-user-select : none;
+        -webkit-touch-callout : none;
+      }
+    </style>
 		<script type="text/javascript" src="../js/FIP-1.0.js"></script>
 		<script type="text/javascript">	
 			//全局变量
